--- a/src/furlongd/Makefile.am
+++ b/src/furlongd/Makefile.am
@@ -1,10 +1,8 @@
 # what flags you want to pass to the C compiler & linker
 #AM_CFLAGS = --pedantic -Wall -std=c99 -O2
-#AM_LDFLAGS = 
-
-SUBDIRS=furlongd
+AM_LDFLAGS = 
 
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
-#bin_PROGRAMS = furlong 
-#furlong_SOURCES = main.c
+bin_PROGRAMS = furlongd 
+furlongd_SOURCES = main.c
