--- a/src/furlongd/Makefile.am
+++ b/src/furlongd/Makefile.am
@@ -5,4 +5,4 @@ AM_LDFLAGS =
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
 bin_PROGRAMS = furlongd 
-furlongd_SOURCES = main.c pid.c net_tcp.c connection.c
+furlongd_SOURCES = main.c pid.c net_tcp.c connection.c session.c hashtable.c
